Fix text overflow on longer menu items

--- a/public_html/dashboard/css/style.css
+++ b/public_html/dashboard/css/style.css
@@ -381,7 +381,7 @@ ul#sidenav div {
 }
 
 ul#sidenav ul a {
-	padding: 10px 30px;
+	padding: 10px 0 10px 30px;
 }
 
 ul#sidenav a span,
